--- a/style.css
+++ b/style.css
@@ -1,67 +1,116 @@
-*{
+* {
     padding: 0%;
     margin: 0%;
-    font-family:"Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
-.header{
+
+.header {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)),
-    url(banner.png);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+        url(banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
 }
-nav{
+
+nav {
     padding: 2% 6%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-nav img{
+
+nav img {
     width: 150px;
 }
-.nav-links{
+
+.nav-links {
     flex: 1;
     text-align: right;
 }
-.nav-links ul li{
+
+.nav-links ul li {
     position: relative;
     padding: 8px 12px;
     display: inline-block;
     list-style: none;
 }
-.nav-links ul li a{
+
+.nav-links ul li a {
     font-size: 13px;
     color: #fff;
     text-decoration: none;
 }
-.nav-links ul li::after{
+
+.nav-links ul li::after {
     content: '';
     height: 2px;
-    width:0%;
+    width: 0%;
     background: #f44336;
     display: block;
     margin: auto;
     transition: 0.5s;
 }
-.nav-links ul li:hover::after{
+
+.nav-links ul li:hover::after {
     width: 100%;
 }
-.text-box{
+
+.text-box {
     width: 90%;
     color: #fff;
     position: absolute;
     top: 50%;
     left: 50%;
     text-align: center;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 62px;
 }
-.text-box p{
+
+.text-box p {
     font-size: 14px;
     margin: 10px 0 40px;
     color: #fff;
+}
+
+.hero-btn {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    background: transparent;
+    position: relative;
+    cursor: pointer;
+}
+
+.hero-btn:hover {
+    border: 1px solid #f44336;
+    background: #f44336;
+    transition: 1s;
+}
+
+@media (max-width:700px) {
+
+    .text-box h1 {
+        font-size: 20px;
+    }
+    .nav-links ul li {
+       display: block;
+    }
+    .nav-links{
+        position: absolute;
+        background: #f44336;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: 0;
+        text-align: left;
+        z-index: 2;
+    }
 }
