--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
-        url(banner.png);
+        url(images/banner.png);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -95,22 +95,63 @@ nav img {
     transition: 1s;
 }
 
+nav .logo {
+    display: none;
+}
+
 @media (max-width:700px) {
 
     .text-box h1 {
         font-size: 20px;
     }
+
     .nav-links ul li {
-       display: block;
+        display: block;
     }
-    .nav-links{
+
+    .nav-links {
         position: absolute;
         background: #f44336;
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -200px;
         text-align: left;
         z-index: 2;
+        transition: 1s;
     }
+
+    nav .logo {
+        display: block;
+        filter: invert(1);
+        height: 13px;
+        width: 13px;
+        margin: 10px;
+        cursor: pointer;
+    }
+
+    .nav-links ul {
+        padding: 30px;
+    }
+}
+
+/* ------course------- */
+.course{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+h1{
+    font-size: 36px;
+    font-weight: 600;
+}
+
+p{
+    color: #777;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
 }
