--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ h3 {
 }
 
 .campus-col img {
-    width: 90%;
+    width: 100%;
     display: block;
 }
 
@@ -247,3 +247,68 @@ h3 {
     text-align: center;
     padding-top: 100px;
 }
+
+.facilities-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+
+.facilities-col img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.facilities-col p{
+    padding: 0;
+}
+
+.facilities-col h3{
+    margin-top: 16px;
+    margin-bottom: 15px;
+    text-align: left;
+}
+
+/* <---------Testimonials--------> */
+.Testimonials{
+    width: 80%;
+    margin: auto;
+    padding-top: 100px;
+    text-align: center;
+}
+
+.testimonilas-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+
+.testimonilas-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+
+.testimonilas-col p{
+    padding: 0;
+}
+
+.testimonilas-col h3{
+    margin-top: 15px;
+    text-align: left;
+}
+
+@media (max-width:700px) {
+    .testimonilas-col img{
+        margin-left: 0px;
+        margin-right: 15px;
+    }
+}
+
